<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MenuFragment"
    android:background="@color/primary">

    <TextView android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menuString"
        android:textSize="35sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"

        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <LinearLayout android:id="@+id/profileBar"

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuTitle"
        >

        <ImageView android:id="@+id/profilePictureMenu"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@raw/profile_picture_ph"
            android:contentDescription="@string/profile_picture" />


        <TextView android:id="@+id/nameTextViewMenu"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/name_placeholder"
            android:gravity="start"
            android:textSize="25sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            />


    </LinearLayout>

    <TextView android:id="@+id/underNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/see_your_profile"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginTop="115dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="17sp"
        android:clickable="true"
        android:textColorHighlight="@color/action"
        android:textColorLink="@color/action"
        android:focusable="true" />

    <android.widget.Button android:id="@+id/logOutButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/log_out"
        android:textColor="@color/secondary"
        android:fontFamily="sans-serif-condensed"
        android:background="@drawable/button_simple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>