<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/comment_background"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_marginTop="5dp"

    >

    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/commentatorProfilePicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@raw/profile_picture_ph"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView android:id="@+id/nameOfCommentator"
        android:layout_width="wrap_content"
        android:lines="1"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/commentatorProfilePicture"
        android:textColor="@color/secondary2"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/name_placeholder"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        />
    <TextView android:id="@+id/commentatedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameOfCommentator"
        app:layout_constraintStart_toStartOf="@id/nameOfCommentator"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/secondary2"


        android:text="@string/post_text_placeholder"
        android:textSize="15sp"
        android:minLines="1"
        android:maxLines="20"
        />

</androidx.constraintlayout.widget.ConstraintLayout>