<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/post_cell_background"
    >

    <View   android:id="@+id/topSpace"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/secondary"
        app:layout_constraintTop_toTopOf="parent"
        />
    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/postedProfilePicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@raw/profile_picture_ph"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/topSpace"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView android:id="@+id/postedNameOfThePoster"
        android:layout_width="wrap_content"
        android:lines="1"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/topSpace"
        app:layout_constraintStart_toEndOf="@id/postedProfilePicture"
        android:textColor="@color/action2"

        android:text="@string/name_placeholder"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:gravity="center"
        />

    <TextView android:id="@+id/postedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/postedProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/secondary2"


        android:text="@string/post_text_placeholder"
        android:textSize="15sp"
        android:minLines="1"
        android:maxLines="20"
        />

    <ImageView android:id="@+id/postedPictureImageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:maxHeight="350dp"
        app:layout_constraintTop_toBottomOf="@id/postedTextView"
        android:visibility="gone"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary"
        app:layout_constraintBottom_toTopOf="@id/postedActionsBar"/>

    <LinearLayout android:id="@+id/postedActionsBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/postedPictureImageView"
        >

        <LinearLayout android:id="@+id/postedLikeAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            >
            <ImageView android:id="@+id/postedLikeActionImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/like_vector_unpressed"

                />
            <TextView android:id="@+id/postedLikeActionText"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:text="@string/like_text"
                />
        </LinearLayout>

        <LinearLayout android:id="@+id/postedCommentAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            >
            <ImageView android:id="@+id/postedCommentActionImage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/comment_vector"
                />
            <TextView android:id="@+id/postedCommentActionText"
                android:layout_width="70dp"
                android:layout_height="20dp"
                android:text="@string/comment_text"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout android:id="@+id/postedBottomCommentActionBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postedActionsBar">

        <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/postedBottomCommentActionBarProfilePicture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/profile_picture"
            android:src="@raw/profile_picture_ph"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView android:id="@+id/postedWriteAComment"
            android:layout_width="fill_parent"
            android:layout_height="30dp"

            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_bar"
            android:hint="@string/write_a_comment_hint"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



