<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChatActivity"
    android:background="@color/primary">


    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/chatNameTitleSection"

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/profilePictureChatMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:src="@raw/profile_picture_ph"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView android:id="@+id/chatNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/name_placeholder"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textSize="20sp"
            android:lines="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/profilePictureChatMenu"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:id="@+id/chattingLine1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/chatNameTitleSection"/>

    <androidx.recyclerview.widget.RecyclerView android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintTop_toBottomOf="@id/chattingLine1"
        app:layout_constraintBottom_toTopOf="@id/chattingLine2"/>

    <View android:id="@+id/chattingLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/secondary"
        app:layout_constraintBottom_toTopOf="@id/chatWritingSection"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/chatWritingSection"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp">

        <android.widget.EditText android:id="@+id/writingBarEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/search_bar"
            android:hint="@string/writing_hint"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <Button android:id="@+id/sendCommentButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/send_button_vector"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/writingBarEditText"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>