<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PostActivity"
    android:background="@color/primary"
    >
    <ImageView android:id="@+id/postingBackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/back_arrow_vector"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        />
    <TextView android:id="@+id/postingTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/create_post"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/postingBackButton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textAlignment="gravity"
        android:gravity="center_vertical"
        android:textColor="@color/secondary2"/>

    <Button android:id="@+id/sendPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:textSize="24sp"
        android:background="@drawable/post_button"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View android:id="@+id/postingSeparatorLine"
        app:layout_constraintTop_toBottomOf="@id/postingBackButton"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="2dp"
        android:background="@color/secondary"/>

    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/postingProfilePicture"
        android:layout_width="60dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/postingSeparatorLine"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="5dp"
        android:src="@raw/profile_picture_ph"/>

    <TextView android:id="@+id/postingNameOfThePoster"
        android:layout_width="wrap_content"
        android:lines="1"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/postingSeparatorLine"
        app:layout_constraintStart_toEndOf="@id/postingProfilePicture"
        android:textColor="@color/action2"

        android:text="@string/name_placeholder"
        android:textSize="17sp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="gravity"
        android:gravity="top"
        />

    <Spinner android:id="@+id/postingCategorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/postingNameOfThePoster"
        app:layout_constraintStart_toEndOf="@id/postingProfilePicture"
        />
    <ImageView android:id="@+id/postingAddPhoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/postingSeparatorLine"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/postingNameOfThePoster"
        android:layout_marginStart="10dp"
        android:src="@drawable/add_photo_vector"
        />
    <ImageView android:id="@+id/postingUploadPhotoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/postingCategorySpinner"
        android:src="@raw/profile_picture_ph"
        android:visibility="gone"
        />

    <EditText android:id="@+id/postingTextInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:textAlignment="gravity"
        android:gravity="top"

        android:textSize="20sp"
        android:textColor="@color/secondary2"


        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"

        app:layout_constraintTop_toBottomOf="@id/postingUploadPhotoView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>